Prevent img overflow

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -9,6 +9,9 @@ body {
 h1, h2, h3 {
     line-height: 1.2;
 }
+img {
+    max-width: 100%;
+}
 textarea {
     width: 100%;
     height: 375px;
